# texte-rs

./: Cargo.toml  README.md
src/: editor.rs  file.rs  main.rs  row.rs  terminal.rs
