[package]
name = "texte-rs"
version = "0.1.0"
edition = "2021"
authors = ["Yasin Tatar <ytatar9@googlemail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1" # semantic versioning: this will get the latest 1.x.x version
unicode-segmentation = "1"
